# Mavis

./: .gitignore  CLAUDE.md  CONCEPT_EXECUTION_EVALUATION.md  CONTRIBUTING.md  EVALUATION.md  EXECUTION_GUIDE.md  IMPLEMENTATION.md  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
_deferred/: README.md
_deferred/mavis/: export_bulk.py
_deferred/tests/: test_export_phase4.py  test_intent_bridge.py
demos/: interactive_vocal_typing.py  vocal_typing_demo.py
mavis/: __init__.py  audio.py  cloud.py  config.py  difficulty.py  export.py  input_buffer.py  intent_bridge.py  leaderboard.py  licensing.py  llm_processor.py  multiplayer.py  output_buffer.py  pipeline.py  researcher_api.py  scoring.py  sheet_text.py  song_browser.py  song_editor.py  songs.py  storage.py  tutorial.py  voice.py
mobile/: App.js  package.json
mobile/src/: AudioPlayer.js  BufferDisplay.js  SheetTextView.js  WebSocketClient.js
songs/: amazing_grace.json  bohemian.json  dont_stop.json  hallelujah.json  mary_lamb.json  nessun_dorma.json  rap_god.json  row_boat.json  somewhere_rainbow.json  twinkle.json
tests/: conftest.py  test_audio.py  test_cloud.py  test_config.py  test_difficulty.py  test_export.py  test_input_buffer.py  test_leaderboard.py  test_licensing.py  test_llm_processor.py  test_multiplayer.py  test_output_buffer.py  test_pipeline.py  test_researcher_api.py  test_scoring.py  test_sheet_text.py  test_song_browser.py  test_song_editor.py  test_songs.py  test_storage.py  test_tutorial.py  test_voice.py  test_web.py
web/: __init__.py  server.py
web/routers/: auth.py  (+2 more)
(+4 files in other folders)
