[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mavis"
version = "0.1.0"
description = "Vocal typing instrument - turn typing into singing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kase Branham"}
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]
llm-local = ["llama-cpp-python"]
llm-cloud = ["anthropic"]
tts-coqui = ["TTS"]
web = ["fastapi", "uvicorn", "websockets"]
cloud = ["bcrypt", "python-jose", "sqlalchemy"]
prosody = ["prosody-protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
